--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,14 @@ readme = "README.md"
 requires-python = ">=3.11,<3.14"
 dependencies = [
     "aiofiles>=24.1.0",
+    "fastapi>=0.128.0",
     "loguru>=0.7.3",
     "onnxruntime>=1.23.2",
+    "openai>=2.14.0",
     "pipecat-ai-small-webrtc-prebuilt>=2.0.0",
     "pipecat-ai[cartesia,deepgram,groq,local-smart-turn-v3,openai,silero,webrtc]>=0.0.98",
     "python-dotenv>=1.2.1",
     "pytz>=2025.2",
     "torch>=2.9.1",
+    "uvicorn>=0.40.0",
 ]
